--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -145,7 +145,7 @@ img{
     border-radius: 50px;
     color: #515151;
     height: 50px;
-    width: 100%;
+    width: 200px;
     transition: all 0.5s;
 
 
