--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -2,6 +2,7 @@
 li {
     float: left;
     padding: 16px;
+
 }
 
 a{
@@ -85,11 +86,11 @@ img{
     width: 100%;
     top: 5px;
     height: 120px;
-    background:linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #E73C7E);
+    background:linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #5BB850, #43BAA6,  #3D488E, #13EDA5);
     background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+	-webkit-animation: Gradient 35s ease infinite;
+	-moz-animation: Gradient 35s ease infinite;
+	animation: Gradient 35s ease infinite;
 }
 
 .endContainer:after{
@@ -118,11 +119,11 @@ img{
 
 	height: 800px;
 	color: #fff;
-	background: linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #E73C7E, #23D5AB);
+	background: linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #5BB850, #43BAA6,  #3D488E, #13EDA5);
 	background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+	-webkit-animation: Gradient 35s ease infinite;
+	-moz-animation: Gradient 35s ease infinite;
+	animation: Gradient 35s ease infinite;
 }
 
 #AboutMe {
@@ -137,7 +138,7 @@ img{
 
 #talkBtn{
 
-    font-size: 12px;
+    font-size: 14px;
     border-color: #AD40E5;
     border-radius: 50;
     background-color: #FEFDF5;
