--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -86,7 +86,7 @@ img{
     width: 100%;
     top: 5px;
     height: 120px;
-    background:linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #5BB850, #43BAA6,  #3D488E, #13EDA5);
+    background:linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #5BB850);
     background-size: 400% 400%;
 	-webkit-animation: Gradient 35s ease infinite;
 	-moz-animation: Gradient 35s ease infinite;
