--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -28,6 +28,7 @@ img{
 .ProjectContainer {
     position:relative;
     width:97%;
+    margin: auto 0;
 
 }
 .ProjectContainer img {
@@ -40,6 +41,7 @@ img{
 .ProjectContainer p {
     opacity: 0;
     position: absolute;
+    text-align: center;
     font: 'Avenir';
     size:24px;
 
@@ -65,13 +67,14 @@ img{
     font-size:18px;
     position: absolute;
     top:70px;
-
-    right:110px;
+    right: 110px;
     text-align: center;
     color:white;
     width: 300px;
     opacity: 1;
     z-index: 1;
+
+    display: inline-block
 
 
 }
