--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -19,10 +19,11 @@ img{
 }
 
 .imageHolder{
-    width: 450px;
+    
     margin: 3px;
     padding: 3px;
     align:center;
+    background: red;
 }
 
 .ProjectContainer {
