--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -2,6 +2,7 @@
 li {
     float: left;
     padding: 16px;
+    list-style-type: none;
 
 }
 
@@ -19,7 +20,7 @@ img{
 }
 
 .imageHolder{
-    
+
     margin: 3px;
     padding: 3px;
     align:center;
