--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -67,16 +67,16 @@ img{
 .ProjectContainer:hover p{
     font: Arial;
     font-size:18px;
-    position: absolute;
-    top:70px;
-    right: 110px;
     text-align: center;
     color:white;
-    width: 300px;
     opacity: 1;
     z-index: 1;
-
-    display: inline-block
+    left: 50%;
+    position: absolute;
+    top: 30%;
+    margin-left: -150px;
+    margin-right: -150px;
+    width: 300px;
 
 
 }
