--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -19,6 +19,11 @@ img{
 
 }
 
+p{
+    font-family: 'Avenir';
+    color:' #515151'
+}
+
 .imageHolder{
 
     margin: 3px;
@@ -122,7 +127,6 @@ img{
 
 #Hero {
 
-	height: 800px;
 	color: #fff;
 	background: linear-gradient(-45deg, #331454, #3F45D2, #B30FB0, #E73C7E, #EE7752, #5BB850, #43BAA6,  #3D488E, #13EDA5);
 	background-size: 400% 400%;
@@ -168,7 +172,7 @@ img{
     font-weight: bold;
     font-family: 'Avenir';
     color: white;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 #progressCircle{
