--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,9 @@ body{
     background-color: #FEFDF5;
     width: auto;
 }
+
+$theme-colors: (
+  'primary': #0074d9,
+  'danger': #ff4136,
+  'secondary':pink,
+);
