post content page

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: Avenir;
@@ -19,3 +20,9 @@ html{
   font-family: 'Avenir';
   src: local('Avenir'), url(./fonts/AvenirLTStd-Book.otf) format('opentype');
 }
+
+$theme-colors: (
+  'primary': pink,
+  'danger': #ff4136,
+  'secondary':pink,
+);
