--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -153,12 +153,12 @@ p{
 
 #talkBtn{
 
-    font-size: 14px;
+    font-size: 15px;
     border-color: #AD40E5;
     border-radius: 50;
     background-color: #FFFFFF;
     border-radius: 50px;
-    color: #515151;
+    color: #AD40E5;
     height: 50px;
     width: 100%;
     margin-top: 20px;
