--- a/src/sections/HomeStyle.css
+++ b/src/sections/HomeStyle.css
@@ -40,6 +40,7 @@ p{
     position:relative;
     width:97%;
     margin: auto 0;
+    cursor: pointer;
 
 }
 .ProjectContainer img {
@@ -120,16 +121,18 @@ p{
     z-index: -1;
 }
 
-.navSocialBar{
+.navSocialBar {
     list-style-type: none;
     position: absolute;
     top: 10px;
     right: 20px;
     padding: 0;
     overflow: hidden;
-    color: white
 }
 
+.NavigationSocialLinks {
+    color: white !important
+}
 .HomePage{
     a {
         color: white
